--- a/index.html
+++ b/index.html
@@ -28,4 +28,5 @@
   </body>
   <script src="loading.js"></script>
   <script src="writing.js"></script>
+  <script src="deleting.js"></script>
 </html>
