adds delete button dynamically as new messages are added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="container">
       <div id="messageBar">
         <p class="chatty-logo">Chatty!</div>
-        <input type="text" class="inputMessage" placeholder="Enter Message"></input>
+        <input type="text" class="inputMessage" id="inputMessage" placeholder="Enter Message"></input>
         <button id="deleteMssgsBtn">Clear Message Board</button>
       </div>  <!-- End messageBar div -->
       <div id="option-container">
