--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <button id="deleteMssgsBtn">Clear Message Board</button>
       </div>  <!-- End messageBar div -->
       <div id="option-container">
-        <input type="checkbox" class="dark-theme-option">Dark Theme</input>
-        <input type="checkbox" class="large-text-option">Large Text</input>
+        <input type="checkbox" class="dark-theme-option" id="dark-theme-option">Dark Theme</input>
+        <input type="checkbox" class="large-text-option" id="large-text-option">Large Text</input>
       </div> <!-- End option container -->
     </div>  <!-- End container div -->
 
