--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <div id="container">
       <div id="messageBar">
-        <p class="chatty-logo">Chatty!</div>
+        <p class="chatty-logo"><i>Chatty!</i></div>
         <input type="text" class="inputMessage" id="inputMessage" placeholder="Enter Message"></input>
         <button id="deleteMssgsBtn">Clear Message Board</button>
       </div>  <!-- End messageBar div -->
@@ -19,7 +19,7 @@
       </div> <!-- End option container -->
     </div>  <!-- End container div -->
 
-    <div id="messageContainer">
+    <div id="messageContainer" class:>
       <div>Messages:</div>
       <div id="outputMessage"></div>
     </div>
