Fixed nav bar fixed position problem

--- a/index.html
+++ b/index.html
@@ -6,20 +6,23 @@
     <title></title>
   </head>
   <body>
-  
+
     <div id="container">
       <div id="messageBar">
         <p class="chatty-logo">Chatty!</p>
         <input type="text" class="inputMessage" id="inputMessage" placeholder="Enter Message"></input>
         <button id="deleteMssgsBtn">Clear Message Board</button>
       </div>  <!-- End messageBar div -->
-      
+
+
       <div id="option-container">
         <input type="checkbox" class="dark-theme-option" id="dark-theme-option">Dark Theme</input>
         <input type="checkbox" class="large-text-option" id="large-text-option">Large Text</input>
       </div> <!-- End option container -->
     </div>  <!-- End container div -->
 
+    <div class="nav-bar-fix">&nbsp</div>
+    
     <div id="messageContainer">
       <div>Messages:</div>
       <div id="outputMessage"></div>
