--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     <link rel="stylesheet" href="main.css">
     <title></title>
   </head>
-  <body>
+  <body class="animatedBackground #animate-area">
 
     <div id="container">
       <div id="messageBar">
-        <p class="chatty-logo"><i>Chatty!</i></div>
-        <input type="text" class="inputMessage" id="inputMessage" placeholder="Enter Message"></input>
+        <p class="chatty-logo"><i>CHATTY!</i></div>
+        <input type="text" class="inputMessage" id="inputMessage" placeholder="Enter Message here, if you dare..."></input>
         <button id="deleteMssgsBtn">Clear Message Board</button>
       </div>  <!-- End messageBar div -->
       <div id="option-container">
-        <input type="checkbox" class="dark-theme-option" id="dark-theme-option">Dark Theme</input>
-        <input type="checkbox" class="large-text-option" id="large-text-option">Large Text</input>
+        <input type="checkbox" class="dark-theme-option" id="dark-theme-option"><b>DARK THEME</b></input>
+        <input type="checkbox" class="large-text-option" id="large-text-option"><b>LARGE TEXT</b></input>
       </div> <!-- End option container -->
     </div>  <!-- End container div -->
 
-    <div id="messageContainer" class:>
-      <div>Messages:</div>
-      <div id="outputMessage"></div>
+    <div id="messageContainer" class=>
+      <div><h2>MESSAGES:</h2></div>
+      <div class="msgBox" id="outputMessage"></div>
     </div>
 
 
