added ability to choose any color for custom themes

--- a/index.html
+++ b/index.html
@@ -27,10 +27,14 @@
       <div>Messages:</div>
       <div id="outputMessage"></div>
     </div>
-
+    <input class="jscolor" id="backgroundColor">
+    <input class="jscolor" id="textColor">
+    <input class="jscolor" id="navColor">
+    <input type="button" id="colorBtn" value="apply">
 
   </body>
   <script src="loading.js"></script>
   <script src="writing.js"></script>
   <script src="deleting.js"></script>
+  <script src="jscolor.js"></script>
 </html>
