fixed style and spacing errors

--- a/index.html
+++ b/index.html
@@ -5,32 +5,29 @@
     <link rel="stylesheet" href="main.css">
     <title></title>
   </head>
-  <body class="animatedBackground #animate-area">
+  <body>
 
     <div id="container">
       <div id="messageBar">
-        <p class="chatty-logo"><i>CHATTY!</i></div>
+        <p class="chatty-logo"><i>CHATTY!</i></p>
         <input type="text" class="inputMessage" id="inputMessage" placeholder="Enter Message here, if you dare..."></input>
         <button id="deleteMssgsBtn">Clear Message Board</button>
       </div>  <!-- End messageBar div -->
 
-
-      <div id="option-container">
+      
+	  <div id="option-container">
         <input type="checkbox" class="dark-theme-option" id="dark-theme-option"><b>DARK THEME</b></input>
         <input type="checkbox" class="large-text-option" id="large-text-option"><b>LARGE TEXT</b></input>
       </div> <!-- End option container -->
     </div>  <!-- End container div -->
-
-    <div id="messageContainer" class=>
-      <div><h2>MESSAGES:</h2></div>
-      <div class="msgBox" id="outputMessage"></div>
-
-    <div class="nav-bar-fix">&nbsp</div>
+    
 
     <div id="messageContainer">
-      <div>Messages:</div>
-      <div id="outputMessage"></div>
-    </div>
+      <div class="msgBox" id="outputMessage"></div>
+    </div>  
+
+  
+
 
 
   </body>
