created working modal to house the theme options

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <div id="option-container">
         <input type="checkbox" class="dark-theme-option" id="dark-theme-option">Dark Theme</input>
         <input type="checkbox" class="large-text-option" id="large-text-option">Large Text</input>
+        <input type="button" id="modalButton" value="Custom theme">
       </div> <!-- End option container -->
     </div>  <!-- End container div -->
 
@@ -27,10 +28,15 @@
       <div>Messages:</div>
       <div id="outputMessage"></div>
     </div>
-    <input class="jscolor" id="backgroundColor">
-    <input class="jscolor" id="textColor">
-    <input class="jscolor" id="navColor">
-    <input type="button" id="colorBtn" value="apply">
+    <div class="colorModal" id="colorModal">
+      <div class="modalContent" id="modalContent">
+        Background color:<input class="jscolor" id="backgroundColor">
+        Text color:<input class="jscolor" id="textColor">
+        Navbar color:<input class="jscolor" id="navColor">
+        <input type="button" id="colorBtn" value="Apply">
+        <input type="button" id="close" value="Close">
+       </div>
+    </div>
 
   </body>
   <script src="loading.js"></script>
