--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         <button id="deleteMssgsBtn">Clear Message Board</button>
       </div>  <!-- End messageBar div -->
 
-      
+
 	  <div id="option-container">
         <input type="checkbox" class="dark-theme-option" id="dark-theme-option"><b>DARK THEME</b></input>
         <input type="checkbox" class="large-text-option" id="large-text-option"><b>LARGE TEXT</b></input>
       </div> <!-- End option container -->
     </div>  <!-- End container div -->
-    
+
 
     <div id="messageContainer">
       <div class="msgBox" id="outputMessage"></div>
-    </div>  
+    </div>
 
-  
+
 
 
 
@@ -34,4 +34,5 @@
   <script src="loading.js"></script>
   <script src="writing.js"></script>
   <script src="deleting.js"></script>
+  <script src="users.js"></script>
 </html>
