Fixed spacing for added user name radio buttons

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 
     <div id="container">
       <div id="messageBar">
-        <p class="chatty-logo"><i>CHATTY!</i></p>
-        <input type="text" class="inputMessage" id="inputMessage" placeholder="Enter Message here, if you dare..."></input>
+        <p class="chatty-logo nav-bar-spacing"><i>CHATTY!</i></p>
+        <input type="radio" name="users" value="Xavier">Xavier</input>
+        <input type="radio" name="users" value="Joanna">Joanna</input>
+        <input type="radio" name="users" value="Mackenzie">Mackenzie</input>
+        <input type="radio" name="users" value="Iveta">Iveta</input>
+        <input type="radio" name="users" value="Sven">Sven</input>
+        <input type="text" id="inputMessage" placeholder="Enter Message here, if you dare..."></input>
         <button id="deleteMssgsBtn">Clear Message Board</button>
       </div>  <!-- End messageBar div -->
 
