Pushing up to fix message animation

--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
        </div>
     </div>
 
+    <div class="maxMessages hide" id="maxMessages">
+      <p>Max Number of messages reached:</p>
+      <p>Please delete uneeded messages</p>
+      <p>or <em>ChattyBot</em> will DESTROY THEM</p>
+      <p><button id="goAwayButton">Go Away</button></p>
+    </div>
+
   </body>
   <script src="loading.js"></script>
   <script src="writing.js"></script>
